--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-cdi</artifactId>
+			<version>7.0.1.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
